src/test/resources/syntactic/error/TC_ERROR_STRUCT.ru
/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 5 | COLUMNA 12 | SE ESPERABA: ; Y SE ENCONTRO: = |
struct Prueba{
  pri INT a=1;  /? un struct no puede tener asignacion
}

impl Prueba{
    .(){
        ;
    }
}

start{
}